Fix collapse navbar and buttons

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,8 @@ body {
 }
 
 .navbar-btn {
-    margin-right: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
     background-color: white;
     background-image: none;
 }
